--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,9 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0-81.0.dev <3.0.0'
+  sdk: ">=2.17.5 <3.0.0"
+  flutter: ">=1.17.0"
+
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,6 +34,28 @@ dependencies:
   flutter:
     sdk: flutter
 
+  business_layout:
+    path: lib/packages/business_layout
+  model:
+    path: lib/packages/model
+  dio: ^4.0.6
+  font_awesome_flutter: ^10.1.0
+  #  firebase_core: ^1.19.2
+  #  cloud_firestore: ^3.3.0
+  #  firebase_storage: ^10.3.1
+  #  firebase_auth: ^3.4.2
+  #  google_sign_in: ^5.3.3
+  #  get_it: ^7.2.0
+  #  injectable: ^1.5.3
+  freezed: ^2.0.3+1
+  get: ^4.6.5
+  #  cloud_firestore: ^3.3.0
+  table_calendar: ^3.0.4
+  intl: ^0.17.0
+  shared_preferences: ^2.0.12
+  hive: ^2.0.6
+  hive_flutter: ^1.1.0
+  flutter_native_splash: ^2.1.6
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -40,6 +64,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: ^2.1.11
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
