--- a/lib/packages/model/pubspec.yaml
+++ b/lib/packages/model/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   json_annotation: ^4.6.0
+  freezed: ^2.1.0+1
+  freezed_annotation: ^2.1.0
 
 
 dev_dependencies:
